--- a/package.json
+++ b/package.json
@@ -1,42 +1,27 @@
 {
-  "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
-    "web": "expo start --web"
-  },
-  "dependencies": {
-    "axios": "^1.3.4",
-    "expo": "^48.0.4",
-    "expo-constants": "~14.2.1",
-    "expo-font": "^11.1.1",
-    "expo-linking": "~4.0.1",
-    "expo-router": "^1.2.0",
-    "expo-splash-screen": "~0.18.1",
-    "expo-status-bar": "~1.4.2",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-native": "0.71.4",
-    "react-native-dotenv": "^3.4.8",
-    "react-native-gesture-handler": "~2.9.0",
-    "react-native-reanimated": "~2.14.4",
-    "react-native-safe-area-context": "4.5.0",
-    "react-native-screens": "~3.20.0",
-    "react-native-web": "~0.18.7"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.19.3",
-    "@babel/plugin-proposal-export-namespace-from": "^7.18.9"
-  },
-  "resolutions": {
-    "metro": "^0.73.7",
-    "metro-resolver": "^0.73.7"
-  },
-  "overrides": {
-    "metro": "^0.73.7",
-    "metro-resolver": "^0.73.7"
-  },
-  "name": "jobify",
+  "name": "jhigu-patro-utils",
   "version": "1.0.0",
-  "private": true
+  "description": "Bikram Sambat (Nepali) calendar utilities — zero dependencies, offline-first. Includes TS/JS library, Dart/Flutter library, and a CLI tool.",
+  "keywords": ["nepali", "calendar", "bikram-sambat", "BS", "AD", "date-conversion", "patro", "cli"],
+  "license": "MIT",
+  "type": "module",
+  "main": "./ts/dist/index.js",
+  "module": "./ts/dist/index.js",
+  "types": "./ts/dist/index.d.ts",
+  "exports": {
+    ".": {
+      "import": "./ts/dist/index.js",
+      "types": "./ts/dist/index.d.ts"
+    },
+    "./data": "./data/nepali_calendar_data.json"
+  },
+  "files": ["ts/dist", "data", "dart", "cli/dist"],
+  "scripts": {
+    "build": "npm run build:ts && npm run build:cli",
+    "build:ts": "cd ts && npm run build",
+    "build:cli": "cd cli && npm run build",
+    "test": "cd ts && npm test",
+    "test:run": "cd ts && npm run test:run",
+    "cli": "node cli/dist/index.js"
+  }
 }
