add tithi for year 2081

--- a/ts/package.json
+++ b/ts/package.json
@@ -16,7 +16,8 @@
   "scripts": {
     "build": "tsc",
     "test": "vitest",
-    "test:run": "vitest run"
+    "test:run": "vitest run",
+    "serve": "npx serve ."
   },
   "devDependencies": {
     "typescript": "^5.0.0",
